fix cut off header

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,7 @@ h1 {
     line-height: 1em;
     letter-spacing: -2px;
     margin-bottom: 0.4em;
+    padding-top: 0.2em;
 }
 h2 {
     font-family: 'Caveat', cursive;
